tests/requests/invalid/001.py
from restkit.http.errors import NoMoreData
request = NoMoreData